# parallel_computing_lab3

./: Cargo.toml
benches/: lab_bench.rs
src/: lib.rs
